# openc8

./: .gitignore  .gitmodules  BUGS.md  CMakeLists.txt  LICENSE.txt  checkm8_conf.h  libusb_helpers.c  libusb_helpers.h  main.c
c8_arduino/: CMakeLists.txt  checkm8_arduino.ino
c8_arduino/include/: User_Setup.h
c8_arduino/lib/hostshield/: settings.h
c8_arduino/src/: checkm8_arduino.ino
c8_libpayload/: CMakeLists.txt
c8_libpayload/pl/: CMakeLists.txt
c8_libpayload/pl/include/: brfunc_aes.h  brfunc_common.h  brfunc_timing.h
c8_libpayload/pl/src/: aes.c  aes_busy.c  aes_sw.c  bootstrap.c  exit_usb_task.c  floppysleep.S  floppysleep.c  sysreg.c  task_sleep_test.c
c8_libpayload/scripts/: headerize.py  librarize.py
c8_payloads/: CMakeLists.txt
c8_payloads/include/: brfunc_aes.h  brfunc_common.h  brfunc_timing.h
c8_payloads/src/: aes_busy.c  aes_sw.c
c8_remote/: CMakeLists.txt  main.c
c8_remote/include/: bootrom_addr.h  bootrom_type.h  checkm8.h  command.h  crypto_host.h  experiment_config.h  experiments.h  host_crypto.h  payload.h  usb_helpers.h
c8_remote/include/dev/: addr.h  experiment_config.h  shared_types.h  types.h
c8_remote/include/tool/: command.h  exploit_config.h  payload.h  usb_helpers.h
c8_remote/include/util/: armv8.h  experiments.h  host_crypto.h
c8_remote/lib/: CMakeLists.txt
c8_remote/lib/crypto/: aes.c  aes_sw_host.c  aes_sw_impl.c
c8_remote/lib/experiments/: CMakeLists.txt  aes_sw.c  crypto.c  power.c  system.c
c8_remote/lib/experiments/include/: exp_util.h
c8_remote/lib/experiments/util/: thread_list.c
c8_remote/lib/payload/: CMakeLists.txt  bootrom_dev.c  payload_entry.S  payload_entry.c
c8_remote/lib/payload/include/: bootrom_func.h  bootrom_types.h  cacheutil.h  crypto_dev.h  dev_cache.h  dev_crypto.h  dev_globals.h  dev_util.h
c8_remote/lib/payload/src/: aes_busy.c  aes_sw.c  aes_sw_bern.c  aes_sw_corr.c  cachelib.c  exit_usb_task.c  floppysleep.c  payload_entry.c  sync.c
c8_remote/lib/payload/src/crypto/: aes_busy.c  aes_hw.c  aes_hw_builtin.c  aes_sw_bern.c  aes_sw_corr.c
c8_remote/lib/payload/src/exploit/: checkm8.c  checkra1n.c  checkra1n_handler.c  checkra1n_stage1.c  checkra1n_stage2.c  handler.S  handler.c  patch_tables.S  patch_tables.c
c8_remote/lib/payload/src/power/: floppysleep.S  floppysleep.c  trigger.S  trigger.c  wfi_test.c
c8_remote/lib/payload/src/system/: cachelib.c  exit_usb_task.S  exit_usb_task.c  gpio_test.c  init_sys.c  sync.c
c8_remote/lib/payload/src/util/: async.c  data.c  exec.c  read.c  write.c
c8_remote/lib/scripts/: librarize.py
c8_remote/src/: command.c  exploit.c  payload.c  usb_helpers.c
checkm8_arduino/: CMakeLists.txt
checkm8_arduino/cmake/Platform/: Arduino.cmake
checkm8_arduino/include/: Usb.h  User_Setup.h
checkm8_arduino/lib/hostshield/: Usb.cpp
checkm8_arduino/src/: checkm8_arduino.ino
checkm8_libusb/src/: core.c  descriptor.c  hotplug.c  io.c  libusbi.h  strerror.c  sync.c
checkm8_libusb/src/os/: linux_netlink.c  linux_usbfs.c  poll_posix.c  threads_posix.c
checkm8_payload/: CMakeLists.txt
checkm8_payloads/: CMakeLists.txt  aes.c  test.c
checkm8_payloads/include/: brfunc_aes.h  brfunc_common.h  brfunc_sep.h  brfunc_timing.h  util.h
checkm8_payloads/src/: aes.c  sysreg.c
checkm8_remote/: CMakeLists.txt  conf.h  libusb_helpers.c  main.c
checkm8_remote/include/: checkm8.h  command.h  libusb_helpers.h  payload.h  usb_helpers.h
checkm8_remote/shellcode/: shellcode.c
checkm8_remote/src/: command.c  exploit.c  libusb_helpers.c  payload.c  usb_helpers.c
exploit/: checkm8.h  commands.c  exploit.c  exploit_helpers.c  libusb_helpers.c  libusb_helpers.h  main.c
include/: ard_protocol.h  checkm8_config.h
libusb/: config.h
libusb/libusb/: core.c  descriptor.c  hotplug.c  io.c  libusbi.h  strerror.c  sync.c
libusb/libusb/os/: linux_netlink.c  linux_udev.c  linux_usbfs.c  threads_posix.c
libusb/src/os/: linux_udev.c  poll_windows.c  poll_windows.h
pongo/: demote_mod  test_module
tools/: CMakeLists.txt  profile.py
tools/bernstein/: correlate.py
tools/correlation/analyze/: analyze.sh  main.c
tools/correlation/strip/: main.c
tools/correlation/verify/: main.c
tools/include/: host_crypto.h
tools/scripts/: profile.py
